<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <DigitalClock
        android:id="@+id/digitalClock"
        style="@style/DigClock"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_button_1"
        style="@style/NumberButton"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_4"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_2" />

    <Button
        android:id="@+id/bt_button_2"
        style="@style/NumberButton"
        android:text="2"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_5"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_3" />

    <Button
        android:id="@+id/bt_button_3"
        style="@style/NumberButton"
        android:text="3"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_6"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_sum" />

    <Button
        android:id="@+id/bt_button_4"
        style="@style/NumberButton"
        android:text="4"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_7"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_5" />

    <Button
        android:id="@+id/bt_button_5"
        style="@style/NumberButton"
        android:text="5"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_8"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_6" />

    <Button
        android:id="@+id/bt_button_6"
        style="@style/NumberButton"
        android:text="6"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_9"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_minus" />

    <Button
        android:id="@+id/bt_button_7"
        style="@style/NumberButton"
        android:text="7"
        app:layout_constraintBottom_toTopOf="@+id/bt_back"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_8" />

    <Button
        android:id="@+id/bt_button_8"
        style="@style/NumberButton"
        android:text="8"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_0"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_9" />

    <Button
        android:id="@+id/bt_button_9"
        style="@style/NumberButton"
        android:text="9"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_split"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_multiply" />

    <Button
        android:id="@+id/bt_button_0"
        style="@style/NumberButton"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/bt_break_open"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_split" />

    <TextView
        android:id="@+id/tv_result"
        style="@style/TextView"
        android:ellipsize="start"
        android:gravity="end"
        android:textSize="@dimen/ts_result"
        app:layout_constraintBottom_toTopOf="@+id/tv_editText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_editText"
        style="@style/TextView"
        android:ellipsize="end"
        android:gravity="end"
        android:textSize="@dimen/ts_edit"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_2" />

    <Button
        android:id="@+id/bt_equals"
        style="@style/ButtonEquals"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_button_dot"
        style="@style/ActionButton"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@+id/bt_equals"
        app:layout_constraintEnd_toEndOf="@+id/bt_equals" />

    <Button
        android:id="@+id/bt_button_sum"
        style="@style/ActionButton"
        android:text="@string/sum"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_minus"
        app:layout_constraintEnd_toEndOf="@+id/bt_button_minus" />

    <Button
        android:id="@+id/bt_button_minus"
        style="@style/ActionButton"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/bt_button_multiply" />

    <Button
        android:id="@+id/bt_button_multiply"
        style="@style/ActionButton"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/bt_button_dot"
        app:layout_constraintEnd_toEndOf="@+id/bt_button_dot" />

    <Button
        android:id="@+id/bt_button_split"
        style="@style/ActionButton"
        android:text="@string/split"
        app:layout_constraintBottom_toTopOf="@+id/bt_break_close"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_dot" />

    <Button
        android:id="@+id/bt_back"
        style="@style/ActionButton"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/bt_clear"
        app:layout_constraintEnd_toStartOf="@+id/bt_button_0" />

    <Button
        android:id="@+id/bt_clear"
        style="@style/ActionButton"
        android:text="@string/ac"
        app:layout_constraintBottom_toBottomOf="@+id/bt_break_open"
        app:layout_constraintEnd_toStartOf="@+id/bt_break_open" />

    <Button
        android:id="@+id/bt_break_open"
        style="@style/ActionButton"
        android:text="@string/break_open"
        app:layout_constraintBottom_toBottomOf="@+id/bt_break_close"
        app:layout_constraintEnd_toStartOf="@+id/bt_break_close" />

    <Button
        android:id="@+id/bt_break_close"
        style="@style/ActionButton"
        android:text="@string/break_close"
        app:layout_constraintBottom_toBottomOf="@+id/bt_equals"
        app:layout_constraintEnd_toStartOf="@+id/bt_equals" />
</androidx.constraintlayout.widget.ConstraintLayout>